--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "stripe": "^10.16.0",
     "validator": "^13.7.0"
   }
 }
